fix person page (overlapping text)

--- a/django/mainapp/static/mainapp/css/index.css
+++ b/django/mainapp/static/mainapp/css/index.css
@@ -44,6 +44,6 @@ p.header {
 }
 
 a.mehr {
-	font-size: 3em;
+	font-size: 3.5em;
 	align-self: flex-end;
 }
